// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. pull quote in culture magazine 1`] = `
.c0 {
  color: #333333;
  font-family: "TimesModern-Regular";
  font-size: 25px;
  line-height: 30px;
}

@media (min-width:768px) {
  .c0 {
    font-size: 30px;
    line-height: 35px;
  }
}

<style>
.S1 {
  border-left-width: 0px;
  display: inline;
  font-size: 75px;
  line-height: inherit;
  margin-left: 0px;
  margin-bottom: -40px;
  margin-top: 0px;
  padding-left: 0px;
}

.S2 {
  border-left-width: 0px;
  color: inherit;
  display: inline;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
  font-size: 14px;
  line-height: inherit;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
  padding-left: 0px;
}

.S3 {
  border-left-width: 0px;
  display: inline;
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 13px;
  margin-top: 0px;
  margin-left: 0px;
  margin-bottom: 0px;
  padding-left: 0px;
}

.S4 {
  border-left-width: 0px;
  color: rgba(105,105,105,1.00);
  display: inline;
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 13px;
  margin-top: 0px;
  margin-left: 0px;
  margin-bottom: 0px;
  padding-left: 0px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  border-left-width: 0px;
  display: flex;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  height: 20px;
  margin-bottom: 0px;
  margin-left: 0px;
  margin-top: 10px;
  padding-left: 0px;
}

.S6 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  border-left-width: 0px;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-left: 0px;
  margin-bottom: 15px;
  margin-top: 0px;
  padding-left: 0px;
}

.IS1 {
  color: rgba(105,105,105,1.00);
  font-family: Flama-Bold;
}

.IS2 {
  color: rgba(105,105,105,1.00);
}
</style>

<blockquote
  url=""
>
  <div
    className="S6"
  >
    <div
      className="IS1 S1"
    >
      “
    </div>
    <div
      className="c0 S2"
    >
      <cite>
        Some content
      </cite>
    </div>
    <div
      className="S5"
    >
      <div
        className="IS2 S3"
      >
        A caption
      </div>
      <div
        className="S4"
      >
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;

exports[`2. pull quote in style magazine 1`] = `
.c0 {
  color: #333333;
  font-family: "TimesModern-Regular";
  font-size: 25px;
  line-height: 30px;
}

@media (min-width:768px) {
  .c0 {
    font-size: 30px;
    line-height: 35px;
  }
}

<style>
.S1 {
  border-left-width: 0px;
  color: rgba(105,105,105,1.00);
  display: inline;
  font-size: 75px;
  line-height: inherit;
  margin-left: 0px;
  margin-bottom: -40px;
  margin-top: 0px;
  padding-left: 0px;
}

.S2 {
  border-left-width: 0px;
  color: inherit;
  display: inline;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
  font-size: 14px;
  line-height: inherit;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
  padding-left: 0px;
}

.S3 {
  border-left-width: 0px;
  color: rgba(105,105,105,1.00);
  display: inline;
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 13px;
  margin-top: 0px;
  margin-left: 0px;
  margin-bottom: 0px;
  padding-left: 0px;
}

.S4 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  border-left-width: 0px;
  display: flex;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  height: 20px;
  margin-bottom: 0px;
  margin-left: 0px;
  margin-top: 10px;
  padding-left: 0px;
}

.S5 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  border-left-width: 0px;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-left: 0px;
  margin-bottom: 15px;
  margin-top: 0px;
  padding-left: 0px;
}

.IS1 {
  font-family: CenturyGothic-Bold;
}
</style>

<blockquote
  url=""
>
  <div
    className="S5"
  >
    <div
      className="IS1 S1"
    >
      “
    </div>
    <div
      className="c0 S2"
    >
      <cite>
        Some content
      </cite>
    </div>
    <div
      className="S4"
    >
      <div
        className="S3"
      >
        A caption
      </div>
      <div
        className="S3"
      >
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;

exports[`3. pull quote in the sunday times magazine 1`] = `
.c0 {
  color: #333333;
  font-family: "TimesModern-Regular";
  font-size: 25px;
  line-height: 30px;
}

@media (min-width:768px) {
  .c0 {
    font-size: 30px;
    line-height: 35px;
  }
}

<style>
.S1 {
  border-left-width: 0px;
  color: rgba(105,105,105,1.00);
  display: inline;
  font-size: 75px;
  line-height: inherit;
  margin-left: 0px;
  margin-bottom: -40px;
  margin-top: 0px;
  padding-left: 0px;
}

.S2 {
  border-left-width: 0px;
  color: inherit;
  display: inline;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
  font-size: 14px;
  line-height: inherit;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: 0px;
  padding-left: 0px;
}

.S3 {
  border-left-width: 0px;
  color: rgba(105,105,105,1.00);
  display: inline;
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 13px;
  margin-top: 0px;
  margin-left: 0px;
  margin-bottom: 0px;
  padding-left: 0px;
}

.S4 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  border-left-width: 0px;
  display: flex;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  height: 20px;
  margin-bottom: 0px;
  margin-left: 0px;
  margin-top: 10px;
  padding-left: 0px;
}

.S5 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  border-left-width: 0px;
  display: flex;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-left: 0px;
  margin-bottom: 15px;
  margin-top: 0px;
  padding-left: 0px;
}

.IS1 {
  font-family: Tiempos-Headline-Bold;
}
</style>

<blockquote
  url=""
>
  <div
    className="S5"
  >
    <div
      className="IS1 S1"
    >
      “
    </div>
    <div
      className="c0 S2"
    >
      <cite>
        Some content
      </cite>
    </div>
    <div
      className="S4"
    >
      <div
        className="S3"
      >
        A caption
      </div>
      <div
        className="S3"
      >
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;
